--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,13 @@ project(my_project)
 set(CMAKE_CXX_STANDARD 14)
 
 # Set names
-set(EXECUTABLE_NAME my_executable)
+set(EXECUTABLE_NAME bptree)
 
 # Add the source directory
 add_subdirectory(src)
 
 # Add the third_party
 add_subdirectory(third_party)
-
-# Create the main executable
-add_executable(
-    ${EXECUTABLE_NAME}
-
-    ${Complete_Srcs}
-)
 
 # Create the test executable
 add_executable(
