--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,8 @@
 set(Srcdir src)
 
 set(Root_Srcs
-    ${Srcdir}/example.cpp
-    ${Srcdir}/example.hpp
+    ${Srcdir}/bptree.hpp
+    ${Srcdir}/bptnode.hpp
 )
 
 set(Complete_Srcs
@@ -17,7 +17,8 @@ set(Complete_Srcs
 # Test sources
 set(Tests_Srcs
     ${Root_Srcs}
-    ${Srcdir}/example_test.cpp
+    ${Srcdir}/bptree_test.cpp
+    ${Srcdir}/bptnode_test.cpp
     ${Srcdir}/main_test.cpp
 
     PARENT_SCOPE
