--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,8 +9,10 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+      with:
+        submodules: recursive
     - name: cmake
-      run: cmake .
+      run: cmake --debug-output .
     - name: cmake build
       run: cmake build .
     - name: tests
