--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -17,3 +17,5 @@ jobs:
       run: cmake --build build
     - name: test
       run: cd build && ./bptree_test
+    - name: benchmark
+      run: cd build && ./bptree_benchmark
