--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -12,10 +12,8 @@ jobs:
       with:
         submodules: recursive
     - name: configure
-      run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
+      run: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release ..
     - name: build
       run: cmake --build build
     - name: test
       run: cd build && ./bptree_test
-    - name: benchmark
-      run: cd build && ./bptree_benchmark
