--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -17,3 +17,18 @@ jobs:
       run: cmake --build build
     - name: test
       run: cd build && ./bptree_test
+
+  build-rasp:
+    
+    runs-on: self-hosted
+    
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        submodules: recursive
+    - name: configure
+      run: mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Release ..
+    - name: build
+      run: cmake --build build
+    - name: test
+      run: cd build && ./bptree_test
